# fury_advertising-dsp-creatives

./: .coveragerc  .fda-python-version  .fury  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  artifacts.yml  codecov.yml  pyproject.toml  setup.cfg  tasks.yml  workflows.yml
.github/: pull_request_template.md
docs/: README.md
great_expectations/: great_expectations.yml
great_expectations/expectations/: .ge_store_backend_id
notebooks/: Prueba_great_expectations.ipynb  README.md  historic_data.ipynb  historic_performance.ipynb  mocked_artifacts.ipynb  monitor_performance.ipynb  prueba_lectura_datos.ipynb  save_last_timestamp.ipynb  test.ipynb  test_load_artifact.ipynb  update_artifact.ipynb  validation_bigquery_vs_spark.ipynb
src/app/conf/: README.md  settings.py
src/app/data/: README.md  run_etl.py  training_dataset.py
src/app/data/creatives/queries/: daily_great_expectations.sql  daily_insert.sql  data_validation_insert.sql  group.sql  historic_daily_performance.sql  optimized_historic_daily_performance.sql  performance_per_hour.sql  prints_check.sql
src/app/data/creatives/queries/queries_ctr_cvr/: daily_insert.sql  group.sql  group_daily.sql  historic_daily_performance.sql
src/app/data/creatives/tasks/: beta_estimation.py  daily_performance.py  sanity_cheks.py
src/app/data/creatives/utils/: beta_estimator.py  spark_extractor.py
src/app/data/creatives_performance/: performance.sql
src/app/data/utils/: bigquery.py  great_expectations_service.py  load_query.py  params_bigquery.py  sparksql.py
src/app/model/: dummy.py  train.py
src/app/mpi/: bridge.py  osobuco_conf.yml
tests/: README.md  conftest.py  generate_mock_data.py  test_beta_estimation.py  test_big_query.py  test_data.py  test_data_quality.py  test_mpi.py  test_train.py  validation_result.yml
