[tool.poetry]
name = "app"
version = "0.0.0"
description = "FDA 2 application"
authors = []
classifiers = [
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = ">=3.8,<=3.9"
fda-toolkit = ">=2.1.0"
google-cloud-bigquery=">=3.1.0"
google-cloud-bigquery-datatransfer="3.6.1"
httplib2="0.20.4"
matplotlib = "3.5"
"melitk.metrics" = "^2.2.9"
"melitk.logging" = "1.1.12"
pandas = "<=1.4.0"
numpy = ">=1.20.0"
protobuf = "3.20.x"
thrift = "0.13.0"
pytz = "^2022.1"
retry = "^0.9.2"
callee = "^0.3.1"
great-expectations = "^0.15.19"
stubs = "^1.0.0"
types-requests = "^2.28.11"
sqlalchemy-bigquery = "^1.4.4"
pybigquery = "^0.10.2"
tiger-python-helper = "^0.7.1"
types-retry = "^0.9.9"
importlib-metadata = "<5.0.0"
pytest-mock = "^3.10.0"
seaborn = "^0.12.1"
types-pytz = "^2022.6.0"
google-cloud = "^0.34.0"
google-cloud-storage = "^2.9.0"
sqlparse = "^0.4.4"
jinjasql = "^0.1.8"
markup = "^0.2"
jinja2 = "<3.1.0"
ipython = "~8.12.0"
sqlalchemy = "^1.4.0"
"melitk.bigquery" = "==1.0.3"
freezegun = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[[tool.poetry.source]]
name = "meli"
url = "https://pypi.artifacts.furycloud.io/simple/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# pyproject.toml
[tool.pytest.ini_options]
addopts = "--verbose --junit-xml=report.xml --cov --cov-report=xml:coverage.xml"
